--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url= jdbc:mysql://localhost:3306/passdb?useSSL=false
 spring.datasource.username= root
-spring.datasource.password= P@ssw0rd
+spring.datasource.password= Jathartha@22
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto= update
