error solved for admin

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@
 spring.datasource.url= jdbc:mysql://localhost:3306/passdb?useSSL=false
 spring.datasource.username= root
 
-spring.datasource.password= krutika28
+spring.datasource.password= root
 
 
 
