Patient Dashboard Uploaded

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@
 spring.datasource.url= jdbc:mysql://localhost:3306/passdb?useSSL=false
 spring.datasource.username= root
 
-spring.datasource.password= root
+spring.datasource.password= P@ssw0rd
 
 
 
