--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 #Dev Configs
-#spring.datasource.url= jdbc:mysql://pass-mysql-db.mysql.database.azure.com:3306/passdb?useSSL=true
-#spring.datasource.username= passroot@pass-mysql-db
-#spring.datasource.password= pass@1234
-#server.port=${PORT:5000}
+spring.datasource.url= jdbc:mysql://pass-mysql-db.mysql.database.azure.com:3306/passdb?useSSL=true
+spring.datasource.username= passroot@pass-mysql-db
+spring.datasource.password= pass@1234
+server.port=${PORT:5000}
 
 #Local Configs
-spring.datasource.url= jdbc:mysql://localhost:3306/passdb?useSSL=false
-spring.datasource.username= root
-
-spring.datasource.password= root
+#spring.datasource.url= jdbc:mysql://localhost:3306/passdb?useSSL=false
+#spring.datasource.username= root
+#
+#spring.datasource.password= root
 
 
 
